[package]
name = "rust_ipscan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
pinger = "0.13.0"
tokio = { version = "1.33.0", features = ["full"] }
